tested git setup

--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN FORM</title>
+    <title>LOGIN FORM PROJECT</title>
     <link rel="stylesheet" href="style.css"
 </head>
 <body>
+    <div class="container child">
+asfd
+    </div>
     <div class="container">
         <form action="" class="form">
             <h2>Sign In</h2>
