--- a/jonnie-pacheco-login-ui-project/login.html
+++ b/jonnie-pacheco-login-ui-project/login.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LOGIN FORM PROJECT</title>
-    <link rel="stylesheet" href="style.css"
+    <title>Jonnie Pacheco's Login UI Project</title>
+    <link rel="stylesheet" href="login-styles.css"
 </head>
 <body>
     <div class="container">
@@ -13,7 +13,8 @@
             <input type="email" name="email" class="box" placeholder="Enter Email">
             <input type="password" name="password" classs="box" placeholder="Enter Password">
             <input type="submit" value="SIGN IN" id="sign in">
-            <a href="#"> Forget Password?</a>
+            <a href="#"> Forget Password? </a>
+            <a href="#">Register</a>
             </form>
             <div class="side>"
                 <img src ="img.png" alt="">
